--- a/DeviceStatusApi/DeviceStatusApi.csproj
+++ b/DeviceStatusApi/DeviceStatusApi.csproj
@@ -16,6 +16,8 @@
     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     <PrivateAssets>all</PrivateAssets>
   </PackageReference>
+  <PackageReference Include="NModbus" Version="3.0.81" />
+  <PackageReference Include="NModbus4" Version="2.1.0" />
   <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0" />
 </ItemGroup>
 
