försöker göra som .env men i .net

--- a/DeviceStatusApi/appsettings.json
+++ b/DeviceStatusApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Key": "denhemliganyckeln987", 
+    "ExpireMinutes": 30                
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
