big commit, backend funkar, testat i postman, får token

--- a/DeviceStatusApi/appsettings.json
+++ b/DeviceStatusApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Jwt": {
-    "Key": "denhemliganyckeln987", 
-    "ExpireMinutes": 30                
+    "Key": "trinisuperhemlignyckelpacom123!!!",
+    "ExpireMinutes": 30
   },
   "Logging": {
     "LogLevel": {
